# qthomework-ncnn

./: CMakeLists.txt
include/: STrack.h  yolov8_pose.h
src/: main.cpp  yolov8_pose.cpp
